# FinHarness

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.ci/issue373-bundle/: checker.zlib.b64.000  checker.zlib.b64.001  projection.zlib.b64  recovery.zlib.b64.000  recovery.zlib.b64.001  recovery.zlib.b64.002  recovery.zlib.b64.003.000  recovery.zlib.b64.003.001  recovery.zlib.b64.004  recovery.zlib.b64.005.000  recovery.zlib.b64.005.001  recovery.zlib.b64.006  registry.zlib.b64.000  statecore-init.zlib.b64.000
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture.yml  bug.yml  deferred.yml  experiment.yml  implementation.yml
.github/workflows/: 451-unittest-diagnostic.yml  465-lifecycle-diagnostic.yml  467-migration-diagnostic.yml  browser.yml  commit-identity.yml  dependency-profiles.yml  documentation-inventory.yml  fuzz.yml  patch-373-independent-audit.yml  scorecard.yml  security.yml
config/: architecture-layers.yml  keyed-mutation-route-capabilities.json
crates/finharness-runtime/: Cargo.toml  PROVENANCE.md  README.md
crates/finharness-runtime/migrations/runtime/: 0001_runtime.sql  0002_orphan_recovery.sql
crates/finharness-runtime/src/: capital.rs  lib.rs
crates/finharness-runtime/src/runtime/: engine.rs  error.rs  mod.rs  registry.rs  supervisor.rs  tests.rs  types.rs
crates/finharness-runtime/src/universal/: config.rs  error.rs  fsutil.rs  mod.rs  mutation.rs  projection.rs  runner.rs  tests.rs  types.rs  workspace.rs
crates/finharness-runtime/tests/: systemd_supervisor.rs  transactional_runtime.rs
data/reports/: trading-validation-report-v1.json
data/security/: authorized-operators.json  restricted-symbols.json
data/watchlists/: equity-core.json  okx-app-self-selected.yaml
docs/: GUIDE.md  README.md  current-system.md  finance-operating-model.md  industry-operating-models.md  investing-first-principles.md  personal-governance.md  product-north-star.md  week-01.md  wheels.md
docs/adr/: 2026-06-01-use-module-docs-and-adrs.md  2026-06-13-pragmatism-first-supersedes-rust-first.md  2026-06-13-target-state-b-is-the-governing-roadmap.md  2026-06-17-alpha-is-not-b-g01-is-an-overclaim-prevention-ladder.md  2026-06-17-fastapi-for-the-local-api.md  2026-06-17-sqlite-for-the-state-core.md  2026-06-17-supporting-runtime-infrastructure.md  2026-06-18-controlled-vocabulary-and-two-tier-language.md  2026-06-18-package-and-reexport-large-modules.md  2026-07-02-capital-mandate-before-delegated-authority.md  2026-07-03-action-intent-authority-bindings-admit-only-to-next-governance-step.md  2026-07-03-agent-authority-grants-are-mandate-bound-credentials.md  2026-07-03-financial-terminology-alignment.md  2026-07-04-capital-objective-fit-before-order-ticket.md  2026-07-11-agent-native-control-ownership.md  2026-07-12-capital-truth-vocabulary.md  2026-07-13-capital-import-recovery-truth.md  (+13 more)
experiments/: backtrader_ma.py  riskfolio_allocation.py  vectorbt_ma.py
frontend/: actions.js  api.js  app.js  index.html  state.js  styles.css
frontend-agent/: app.js  index.html  styles.css
health/: README.md  import_health.py  summary.py
ideas/: 2026-05-31-agent-native-financial-os-ideas.md  2026-06-01-ai-era-financial-edge-ideas.md  2026-06-01-cognitive-engineering-workflow.md  2026-06-01-goal-bound-workflow-orchestration.md  2026-06-02-execution-layer-institutional-practices.md  2026-06-02-post-trade-layer-institutional-practices.md  2026-06-02-research-asset-id-handoff.md  2026-06-02-research-asset-library.md  2026-06-02-risk-gate-layer-institutional-practices.md  BES.md  README.md  backlog.md
scripts/: _diagnose_373_snapshot.py  _indicator_cli.py  _patch_373_checker.py  _patch_373_checker_lint.py  _patch_373_core.py  _patch_373_final.py  _patch_373_receipt_type.py  _patch_373_recovery_lint.py  _patch_373_tests.py  agent_shell_fixture_runtime.py  alpaca_paper_configure.py  alpaca_paper_dca_buy.py  alpaca_paper_order_cycle.py  alpaca_paper_strategy_order.py  audit_documentation_inventory.py  audit_issue_taxonomy.py  audit_rule_lineage.py  backup.py  benchmark_capital_world.py  check_architecture_boundaries.py  check_capital_import_entrypoints.py  check_development_environment.py  check_keyed_mutation_route_capabilities.py  check_python_wheels.py  check_redteam_tool_readiness.py  describe_agent_tools.py  export_redteam_artifacts.py  export_redteam_promptfoo.py  generate_security_sbom.py  generate_trading_validation_report.py  import_beancount_ledger.py  import_personal_finance_export.py  manage_governance_inventories.py  manage_issue_worktree.py  manage_pr_contract.py  migrate_state_core.py  okx_live_order.py  okx_market_snapshot.py  probe_base_runtime.py  probe_dependency_group.py  (+74 more)
tests/: __init__.py  _graph_registry.py  _policy_registry.py  _review_fixtures.py  _scaffold.py  _statecore_fixtures.py  asgi_test_client.py  authority_test_helpers.py  integration_property_baseline.py  pytest-only.txt  test_abstraction_inventory_current.py  test_abstraction_inventory_execution.py  test_action_intent_authority_bindings.py  test_action_intents.py  test_agent_authority_grants.py  test_agent_capabilities.py  test_agent_cognition_flow.py  test_agent_context.py  test_agent_context_projection.py  test_agent_context_trust_map.py  test_agent_evidence.py  test_agent_operating_flow.py  test_agent_proposal_drafts.py  test_agent_receipt_search.py  test_agent_review_note_drafts.py  test_agent_run_receipts.py  test_agent_runtime.py  test_agent_runtime_receipts.py  test_agent_scaffold_revision_candidates.py  test_agent_shell.py  test_agent_shell_provider_redlines.py  test_agent_tool_availability.py  test_agent_tool_registry.py  test_agent_tool_result_envelope.py  test_agent_tools.py  test_agent_work_loop_acceptance.py  test_agent_work_loop_acceptance_hermetic.py  test_agent_work_loop_models.py  test_agent_work_loop_reducer.py  test_allocation.py  (+198 more)
(+763 files in other folders)
