[workspace]
members = ["crates/finharness-runtime"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
hex = "0.4"
libc = "0.2"
rusqlite = { version = "=0.40.1", features = ["bundled", "backup"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
uuid = { version = "=1.24.0", features = ["serde", "v7"] }
