[project]
name = "finharness"
version = "0.1.0"
description = "AI finance research and harness engineering lab."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "backtrader>=1.9.78.123",
    "deepeval>=3.7.0",
    "fastapi>=0.137.1",
    "keyring>=25.7.0",
    "langgraph>=1.2.1",
    "nautilus-trader>=1.227.0",
    "openai-agents>=0.6.1",
    "pandas>=2.2.0",
    "pandas-ta>=0.4.71b0",
    "pandera>=0.20",
    "plotly>=5.20.0",
    "pydantic-settings>=2.14.1",
    "quantstats>=0.0.81",
    "riskfolio-lib>=7.2.1",
    "scipy>=1.17.1",
    "sqlmodel>=0.0.38",
    "structlog>=26.1.0",
    "ta-lib>=0.6.8",
    "uvicorn[standard]>=0.40.0",
    "vectorbt>=1.0.0",
    "yfinance>=0.2.60",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.uv]
package = false

[tool.uv.sources]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts", "experiments"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "S", "RUF", "PTH", "TID", "C901"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S105", "S106", "S108"]
"scripts/*" = ["S603", "S607"]
"experiments/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
