[package]
name = "finharness-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["transactional-runtime"]
systemd-supervisor = ["dep:libc"]
universal-executor = ["dep:libc"]
transactional-runtime = ["universal-executor", "dep:rusqlite", "dep:uuid"]

[[bin]]
name = "finharness-job-fixture"
path = "src/bin/finharness-job-fixture.rs"
required-features = ["systemd-supervisor"]

[[bin]]
name = "finharness-task-runner"
path = "src/bin/finharness-task-runner.rs"
required-features = ["universal-executor"]

[dependencies]
hex.workspace = true
libc = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
sha2.workspace = true
uuid = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1.7"

[[bin]]
name = "finharness-runtime"
path = "src/bin/finharness-runtime.rs"
required-features = ["transactional-runtime"]
